--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,10 @@
       <a href="{{ site.github.releases_url }}"><img alt="Github" src="/images/ionicons/svg/download-outline.svg"
           height="40"></a>
       {% endif %}
+      <p />
+      <p />
+      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl"
+          src="/images/hyperbowl/icons/hyperbowl200.png"></a>
     </header>
 
     <section>
@@ -48,6 +52,7 @@
           Owned and operated by <a href="http://philipchu.com/">Phil Chu</a><br />
           Technicat logo by <a href="http://espressyourself.coffee">Dakota Snow</a><br />
           Icons from <a href="http://ionicons.com/">Ionicons</a><br />
+          HyperBowl icon from <a href="http://www.absolutecertaintyinc.com/">Absolute Certainty</a><br />
           Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a><br />
         </small></p>
     </footer>
