--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,10 @@
           src="/images/ionicons/svg/logo-apple-appstore.svg" height="40"></a>
       <a href="https://store.steampowered.com/app/847530/HyperBowl/"><img alt="Steam"
           src="/images/ionicons/svg/logo-steam.svg" height="40"></a>
-      <a href="https://technicat.itch.io/hyperbowl"><img alt="Itch.io" src="/images/ionicons/svg/game-controller-sharp.svg"
+      <a href="https://technicat.itch.io/hyperbowl"><img alt="Itch.io"
+          src="/images/ionicons/svg/game-controller-sharp.svg" height="40"></a>
+      <a href="https://vimeo.com/showcase/9418250"><img alt="Vimeo" src="/images/ionicons/svg/logo-vimeo.svg"
           height="40"></a>
-      <a href="https://vimeo.com/showcase/9418250"><img alt="Vimeo" src="/images/ionicons/svg/logo-vimeo.svg" height="40"></a>
       <a href="{{ site.github.repository_url }}"><img alt="Github" src="/images/ionicons/svg/logo-octocat.svg"
           height="40"></a>
       {% if site.show_downloads %}
@@ -33,8 +34,7 @@
       {% endif %}
       <p />
       <p />
-      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl"
-          src="/images/hyperbowl/icons/hyperbowl200.png"></a>
+      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl" src="/images/hyperbowl/icons/hyperbowl200.png"></a>
     </header>
 
     <section>
@@ -43,9 +43,6 @@
 
     </section>
     <footer>
-      {% if site.github.is_project_page %}
-      <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-      {% endif %}
       <p><small>
           Copyright &copy; 2017-2022 <a href="http://technicat.com/">Technicat LLC</a><br />
           <a href="https://vimeo.com/showcase/9417158">Las Vegas, Nevada</a><br />
