--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       {% endif %}
       <p />
       <p />
-      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl" src="/images/hyperbowl/icons/hyperbowl200.png"></a>
+      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl" src="/images/hyperbowl/icons/hyperbowl200.png" height="175"></a>
     </header>
 
     <section>
