--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,8 @@
 <body>
   <div class="wrapper">
     <header>
+      <h1>{{ site.title | default: site.github.repository_name }}</h1>
+
       {% if site.logo %}
       <a href="http://technicat.com/"><img src="{{site.logo | relative_url}}" alt="Technicat" /></a><br />
       {% endif %}
@@ -32,9 +34,8 @@
       <a href="{{ site.github.releases_url }}"><img alt="Github" src="/images/ionicons/svg/download-outline.svg"
           height="40"></a>
       {% endif %}
-      <p />
-      <p />
-      <a href="http://hyperbowl.rocks/"><img alt="HyperBowl" src="/images/hyperbowl/icons/hyperbowl200.png" height="175"></a>
+      <p/>
+      <p>{{ site.description | default: site.github.project_tagline }}</p>
     </header>
 
     <section>
@@ -49,8 +50,8 @@
           Owned and operated by <a href="http://philipchu.com/">Phil Chu</a><br />
           Technicat logo by <a href="http://espressyourself.coffee">Dakota Snow</a><br />
           Icons from <a href="http://ionicons.com/">Ionicons</a><br />
-          HyperBowl icon from <a href="http://www.absolutecertaintyinc.com/">Absolute Certainty</a><br />
-          Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a><br />
+          Hosted on GitHub Pages &mdash; Adapted from the <a href="https://github.com/pages-themes/minimal">Minimal</a>
+          theme by <a href="https://github.com/orderedlist">orderedlist</a><br />
         </small></p>
     </footer>
   </div>
